--- a/PortFolio-vite/tsconfig.json
+++ b/PortFolio-vite/tsconfig.json
@@ -1,7 +1,20 @@
 {
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true, // default export가 없는 모듈에서 default imports를 허용
     "target": "ES2020",
     "useDefineForClassFields": true,
+    "experimentalDecorators": true, // decorator 실험적 허용
+    "emitDecoratorMetadata": true, // 데코레이터가 있는 선언에 대해 특정 타입의 메타 데이터를 내보내는 실험적인 지원
+    // "module": "commonjs", // import 문법
+    "pretty": true, // error 메시지 예쁘게
+    "sourceMap": true, // 소스맵 파일 생성 -> .ts가 .js 파일로 트랜스 시 .js.map 생성
+    "outDir": "./dist", // 트랜스 파일 (.js) 저장 경로
+    "allowJs": true, // js 파일 ts에서 import 허용
+    "esModuleInterop": true, // ES6 모듈 사양을 준수하여 CommonJS 모듈을 가져올 수 있게 허용
+    "typeRoots": [
+      "./src/types/express.d.ts", // 타입(*.d.ts)파일을 가져올 디렉토리 설정
+      "./node_modules/@types" // 설정 안할시 기본적으로 ./node_modules/@types
+    ],
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
@@ -20,6 +33,38 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": [
+    "./src/**/*" // build 시 포함
+  ],
+  "exclude": [
+    "node_modules", // build 시 제외
+    "tests"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
+
+// {
+//   "compilerOptions": {
+//     "target": "ES2020",
+//     "useDefineForClassFields": true,
+//     "lib": ["ES2020", "DOM", "DOM.Iterable"],
+//     "module": "ESNext",
+//     "skipLibCheck": true,
+
+//     /* Bundler mode */
+//     "moduleResolution": "bundler",
+//     "allowImportingTsExtensions": true,
+//     "resolveJsonModule": true,
+//     "isolatedModules": true,
+//     "noEmit": true,
+//     "jsx": "react-jsx",
+
+//     /* Linting */
+//     "strict": true,
+//     "noUnusedLocals": true,
+//     "noUnusedParameters": true,
+//     "noFallthroughCasesInSwitch": true
+//   },
+//   "include": ["src"],
+//   "references": [{ "path": "./tsconfig.node.json" }]
+// }
