--- a/PortFolio-vite/package.json
+++ b/PortFolio-vite/package.json
@@ -14,6 +14,8 @@
     "dayjs": "^1.11.10",
     "express": "^4.19.2",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
