--- a/PortFolio-vite/package.json
+++ b/PortFolio-vite/package.json
@@ -10,13 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.0",
     "@reduxjs/toolkit": "^2.2.3",
+    "@types/react-modal": "^3.16.3",
     "dayjs": "^1.11.10",
     "express": "^4.19.2",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "styled-components": "^6.1.8"
